--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,2 +1,32 @@
+* {
+    padding: 0%;
+    margin: 0%;
+  }
 
+body{
+    background-color: rgb(86, 86, 241);
+}
+header{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(211, 210, 208);
+}
+ul{
+    display: flex;
+    list-style-type: none;
+}
 
+li {
+  display: inline-block;
+   margin: 1vh; 
+   list-style-type: none;
+        }
+
+a{
+ text-decoration: none;
+   color: rgb(0, 0, 0);
+  font-size: 0,5cm;
+  font-family: 'Poppins', sans-serif;
+   list-style-type: none;}
+            
+            
